add some fix
